# Graduation-Project

./: .agent.md  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  MIGRATION_GUIDE.md  Project PRD.md  PromptEvo_Documentation.md  README.md  RELEASE_NOTES.md  STORAGE_SETUP.md  agents_diff.patch  api.py  audit_report.md  config.py  current_ruff.json  dashboard.py  diff.txt  diff_stat.txt  docker-compose.yml  extracted_ruff.txt  final_error.txt  final_pytest_output.txt  fix_braces.py  fix_dashboard.py  fix_dashboard_2.py  fix_imports.py  fix_syntax.py  func.txt  inspect_db.py  main.py  main_out.txt  novel_attack_techniques.md  patch_analyst.py  patch_experience_pool.py  patch_graph.py  patch_hive_mind.py  preflight_check.py  pyproject.toml  (+24 more)
adapters/: base_adapter.py  langchain_adapter.py  multimodal_adapter.py  ollama_adapter.py
agents/: analyst.py  combiner.py  decomposer.py  gci.py  hive_mind.py  red_debate_swarm.py  rmce.py  scout.py  self_referee.py  target.py
backend/: .dockerignore  Dockerfile  requirements.txt  setup.py
benchmarks/: harmbench.py
cli/: setup.py
config/: agent_personas.yaml  amnesia_steering.yaml
core/: circuit_breaker.py  constants.py  context_window.py  graph.py  llm_factory.py  llm_resolver.py  llm_router.py  logger.py  paths.py  self_correction.py  session_factory.py  state.py  token_governor.py  turn_record.py  types.py  utils.py
data/: attack_scenarios.yaml
docs/: 01_README_AND_SETUP.md  02_ARCHITECTURE_AND_STATE.md  03_AGENTS_ECOSYSTEM.md  PHASE1_COMPLETE.md  api_errors.md
evaluators/: judge_ensemble.py  (+5 more)
(+417 files in other folders)
